@@ -259,7 +259,10 @@ this repository contains the full copyright notices and license terms. -->
         <record model="ir.message" id="msg_action_invalid_context">
             <field name="text">Invalid context "%(context)s" for action "%(action)s".</field>
         </record>
-
+        
+        <record model="ir.message" id="msg_missing_configuration">
+            <field name="text">Connection to server failed due to a missing configuration.</field>
+        </record>
         <record model="ir.message" id="msg_model_invalid_condition">
             <field name="text">The condition "%(condition)s" is not a valid PYSON expression for button rule "%(rule)s".</field>
         </record>
