@@ -11,6 +11,8 @@ from urllib.parse import parse_qs, unquote_plus
 
 from trytond.config import config, parse_uri
 from trytond.transaction import Transaction
+from trytond.model.exceptions import ValidationError
+from trytond.i18n import gettext
 
 __all__ = ['sendmail_transactional', 'sendmail', 'SMTPDataManager']
 logger = logging.getLogger(__name__)
@@ -97,8 +99,7 @@ def get_smtp_server(uri=None, strict=False):
         server = connector(uri.hostname, uri.port, **extra)
     except Exception:
         if strict:
-            raise
-        logger.error('fail to connect to %s', uri, exc_info=True)
+            raise ValidationError(gettext('ir.msg_missing_configuration'))
         return
 
     if 'tls' in uri.scheme:
